[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcsb.utils.targets"
description = "RCSB Python Wrapper Module for Target Utilities"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rcsb.db >= 1.721",
    "rcsb.utils.io >= 1.51",
    "rcsb.utils.chemref >= 0.93",
    "rcsb.utils.config >= 0.40",
    "rcsb.utils.seq >= 0.82",
    "rcsb.utils.taxonomy >= 0.43",
    "rcsb.utils.multiproc >= 0.20",
    "chembl-webresource-client >= 0.10.2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["check-manifest"]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_utils_targets"

[tool.setuptools.packages.find]
include = ["rcsb*"]  # must leave at "rcsb*" and not "rcsb.*", else the 'rcsb/__init__.py' file is dropped
exclude = ["rcsb.utils.test*", "rcsb.mock-*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "rcsb.utils.targets.__version__"}

# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
